# wstcollision

./: .gitignore  CMakeLists.txt  README  SConstruct  collision.cxx  flake.nix  main.cxx
src/: collision.cpp  collision.hxx  colltest.cpp  colltest.hxx  main.cpp
